--- a/_pages/License/네트워크관리사/기타 프로토콜.md
+++ b/_pages/License/네트워크관리사/기타 프로토콜.md
@@ -14,7 +14,7 @@ bookmark: true
 # 기타 프로토콜 정리
 ---
 
-### IGMP
+## IGMP
 
 ```
 * 인터넷 그룹 관리 프로토콜 (Internet Group Management Protocol)
@@ -28,7 +28,7 @@ bookmark: true
 ```
 
 
-### ICMP
+## ICMP
 ```
 * Internet Control Message Protocol
 * OSI 3계층 네트워크 계층
@@ -46,7 +46,7 @@ bookmark: true
 ```
 
 
-### SNMP (61)
+## SNMP (61)
 
 ```
 * 간이 망 관리 프로토콜 (Simple Network Management Protocol)
@@ -60,7 +60,7 @@ bookmark: true
 ```
 
 
-### SNTP (123)
+## SNTP (123)
 
 ```
 * 네트워크 상의 시간 동기화를 위한 프로토콜 (Simple Network Time Protocol)
@@ -72,7 +72,7 @@ bookmark: true
 ```
 
 
-### DHCP
+## DHCP
 
 ```
 * IP 주소 및 기타 네트워크 구성 정보를 자동으로 할 (Dynamic Host Configuration Protocol)
@@ -86,7 +86,7 @@ bookmark: true
 ```
 
 
-### OSPF
+## OSPF
 
 ```
 * Open Shortest Path First
