--- a/_pages/License/네트워크관리사/기타 프로토콜.md
+++ b/_pages/License/네트워크관리사/기타 프로토콜.md
@@ -22,7 +22,8 @@ bookmark: true
 * 오류 메시지 보고와 네트워크 상태 진단을 통해 IP 네트워크의 문제를 감지하고 보고
 * IP 멀티캐스크를 실현하기 위한 통신 규약 (로컬 네트워크 상의 멀티캐스팅 그룹제어 수행)
 * 멀티캐스크 그룹을 네트워크의 멀티캐스크 라우터들에게 알리는 수단을 제공
-  (라우터는 호스트에게 네트워크 그룹에 해당하는 호스트의 정보를 수집하기 위해 쿼리 메시지를 보내고, 호스트는 자신의 그룹을 라우터에게 알려주는 것)
+  (라우터는 호스트에게 네트워크 그룹에 해당하는 호스트의 정보를 수집하기 위해 쿼리 메시지를 보내고,
+   호스트는 자신의 그룹을 라우터에게 알려주는 것)
 * 비대칭 프로토콜 (최초의 리포팅을 손실해도 갱신하여 수정 없이 진행하는 방식)
 * TTL 제공하는 프로토콜
 ```
@@ -75,11 +76,11 @@ bookmark: true
 ## DHCP
 
 ```
-* IP 주소 및 기타 네트워크 구성 정보를 자동으로 할 (Dynamic Host Configuration Protocol)
+* IP 주소 및 기타 네트워크 구성 정보를 자동으로 할당 (Dynamic Host Configuration Protocol)
 * OSI 7계층 응용 계층
 * 클라이언트 - 서버 모델을 기반으로 UDP 프로토콜 사용
 
-* 중앙에서 IP Address를 관리하고 개별 클라이언트에게 자동으 IP 주소를 할당
+* 중앙에서 IP Address를 관리하고 개별 클라이언트에게 자동으로 IP 주소를 할당
   (IP Address의 낭비를 막는 방법 중 하나)
 * 이동성 보장 (이동 시 새로운 주소 할당 가능)
 * 여러 대의 PC가 있는 곳에서 DHCP를 설정하는 것이 적합
