--- a/_pages/License/네트워크관리사/포트번호 정리.md
+++ b/_pages/License/네트워크관리사/포트번호 정리.md
@@ -14,21 +14,21 @@ bookmark: true
 # 주요 네트워크 포트 번호 정리
 ---
 
-### 웹 관련 포트
+## 웹 관련 포트
 
 |서비스/프로토콜|포트 번호|설명|
 |---|---|---|
 |HTTP|80|웹사이트 트래픽|
 |HTTPS|443|SSL이 적용된 보안 웹사이트 트래픽, TLS는 SSL의 표준|
 
-### 원격 관련 포트
+## 원격 관련 포트
 
 |서비스/프로토콜|포트 번호|설명|
 |---|---|---|
 |SSH|22|보안 원격 접속|
 |Telnet|23|원격 터미널 접속|
 
-### 파일 전송 관련 포트
+## 파일 전송 관련 포트
 
 |서비스/프로토콜|포트 번호|설명|
 |---|---|---|
@@ -36,7 +36,7 @@ bookmark: true
 |TFTP|69|간이 파일 전송 프로토콜|
 |SFTP|22|SSH를 통한 보안 파일 전송|
 
-### 이메일 관련 포트
+## 이메일 관련 포트
 
 |서비스/프로토콜|포트 번호|설명|
 |---|---|---|
@@ -46,13 +46,13 @@ bookmark: true
 |SMTPS|465|보안 메일 전송 프로토콜|
 |POP3S|995|보안 메일 수신 프로토콜|
 
-### 네트워크 관리 관련 포트
+## 네트워크 관리 관련 포트
 
 |서비스/프로토콜|포트 번호|설명|
 |---|---|---|
 |SNMP|161|단순 네트워크 관리 프로토콜|
 
-### 기타 주요 포트
+## 기타 주요 포트
 
 |서비스/프로토콜|포트 번호|설명|
 |---|---|---|
@@ -61,7 +61,7 @@ bookmark: true
 |SNTP|123|장치 간 동기화 상태 체크 및 유지, 시간 동기화 관련 프로토콜|
 |LDAP|389|경량 디렉토리 접근 프로토콜|
 
-### DB 관리 포트
+## DB 관리 포트
 
 |서비스/프로토콜|포트 번호|설명|
 |---|---|---|
