--- a/_pages/License/SQLD/기초 데이터베이스 개념.md
+++ b/_pages/License/SQLD/기초 데이터베이스 개념.md
@@ -25,3 +25,9 @@ bookmark: true
 >\> 데이터 구조 : 행(Row)과 열(Column)로 구성된 테이블 형태로 저장
 >\> 속성 : 스키마에 따라 구성되며, SQL을 주로 사용
 >\> 예시 : MySQL, Oracle Database, SQL Server, PostgreSQL 등
+
+
+## 논리적·물리적 데이터 구성 요소
+---
+ - 논리적일 때 : 엔터티, 속성, 인스턴스
+ - 물리적일 때 : 테이블, 컬럼, 행
