--- a/_pages/License/SQLD/엔터티.md
+++ b/_pages/License/SQLD/엔터티.md
@@ -10,10 +10,11 @@ thumbnail: ""
 bookmark: true
 ---
 
-# 엔터티
+## 엔터티
 ---
 
-## 개념
+### 개념
+---
 - 독립적으로 식별 가능한 객체나 사물
 - 데이터 표현의 최소한의 단위
 - 엔터티는 인스턴스의 집합
@@ -27,7 +28,8 @@ bookmark: true
 - 인스턴스 : 특정 학생의 데이터 (권예지 / 0001 / 컴퓨터공학과)
 ````
 
-## 특징
+### 특징
+---
 - **유일한 식별자**에 의해 식별 가능 (사번, 학번 등 고유 번호)
 - 엡무에 필요하고 관리하고자 하는 정보
 - 2개 이상의 인스턴스의 집합
@@ -35,7 +37,8 @@ bookmark: true
 - 타 엔터티와 최소 1개 이상의 관계 성립
 
 
-## 분류
+### 분류
+---
 ```
  유형/무형에 따른
 - 유형엔터티 : 실체가 있음 (사원, 물품 등)
@@ -50,7 +53,8 @@ bookmark: true
 ```
 
 
-## 명명 규칙
+### 명명 규칙
+---
 - 현업에서 사용
 - 약어 사용 X
 - 단수 명사
@@ -58,7 +62,8 @@ bookmark: true
 - 생성 의미대로 이름 부여
  
 
-## 표기법
+### 표기법
+---
 - 엔터티는 사각형
 - IE 표기법 : 최상단에 주식별자, 하위에 타식별자
 - BARKER 표기법 : 최상단에 엔터티, #주식별자, 하위에 타식별자
