--- a/_pages/License/SQLD/데이터 모델링.md
+++ b/_pages/License/SQLD/데이터 모델링.md
@@ -17,11 +17,10 @@ bookmark: true
 
 ## 특징
 
-```
-1. 단순화
-2. 추상화
-3. 명확화
-```
+> 1. 단순화
+> 2. 추상화
+> 3. 명확화
+
 
 
 ## 유의점
@@ -35,35 +34,31 @@ bookmark: true
 
 ## 3가지 요소
 
-```
-1. 대상 (엔터티)
-2. 속성 (컬럼)
-3. 관계 (타 엔터티와의 연결고리)
-```
+> 1. 대상 (엔터티)
+> 2. 속성 (컬럼)
+> 3. 관계 (타 엔터티와의 연결고리)
 
 
 ## 데이터 모델링 3단계
 \* 밑으로 갈수록 구체화, 위로 갈수록 추상화
-```
-1. 개념적 모델링
-    - 업무 협의에 있어서 이 정도가 필요하겠다 정도
-2. 논리적 모델링
-    - 세부속성, 식별자, 관계 표현
-    - 정규화 수행 단계
-3. 물리적 모델링
-    - 앞의 논리적 설계를 실질적(물리적)으로 생성
-    - 성능, 저장구조, 보안, 가용성 등을 고려하는 단계
-```
+
+> 1. 개념적 모델링
+>     - 업무 협의에 있어서 이 정도가 필요하겠다 정도
+> 2. 논리적 모델링
+>     - 세부속성, 식별자, 관계 표현
+>     - 정규화 수행 단계
+> 3. 물리적 모델링
+>     - 앞의 논리적 설계를 실질적(물리적)으로 생성
+>     - 성능, 저장구조, 보안, 가용성 등을 고려하는 단계
 
 
 ## ERD (Entity Relationship Diagram)
 \* 엔터티 간의 관계를 시각적으로 표현한 것이며, 1976년 피터첸이 만든 것
-```
-6단계
-1. 엔터티 도출
-2. 엔터티 배치
-3. 관계 설정
-4. 관계명 서술
-5. 관계 참여도 기술
-6. 관계 필수 여부 확인
-```
+
+>  6단계
+> 1. 엔터티 도출
+> 2. 엔터티 배치
+> 3. 관계 설정
+> 4. 관계명 서술
+> 5. 관계 참여도 기술
+> 6. 관계 필수 여부 확인
