--- a/_pages/License/SQLD/데이터 모델링.md
+++ b/_pages/License/SQLD/데이터 모델링.md
@@ -10,12 +10,12 @@ thumbnail: ""
 bookmark: true
 ---
 
-# 데이터 모델링
+## 데이터 모델링
 ---
  \* 비즈니스 프로세스와 데이터 요구사항을 추상적이고 구조화된 형태로 표현
 
 
-## 특징
+### 특징
 
 > 1. 단순화
 > 2. 추상화
@@ -23,21 +23,21 @@ bookmark: true
 
 
 
-## 유의점
+### 유의점
 
 > 1. 중복성
 > 2. 비유연성
 > 3. 비일관성
 
 
-## 3가지 요소
+### 3가지 요소
 
 > 1. 대상 (엔터티)
 > 2. 속성 (컬럼)
 > 3. 관계 (타 엔터티와의 연결고리)
 
 
-## 데이터 모델링 3단계
+### 데이터 모델링 3단계
 \* 밑으로 갈수록 구체화, 위로 갈수록 추상화
 
 > 1. 개념적 모델링
@@ -50,10 +50,10 @@ bookmark: true
 >     - 성능, 저장구조, 보안, 가용성 등을 고려하는 단계
 
 
-## ERD (Entity Relationship Diagram)
+### ERD (Entity Relationship Diagram)
 \* 엔터티 간의 관계를 시각적으로 표현한 것이며, 1976년 피터첸이 만든 것
 
->  6단계
+>  **6단계**
 > 1. 엔터티 도출
 > 2. 엔터티 배치
 > 3. 관계 설정
