Update 기초 데이터베이스 개념.md

--- a/_pages/License/SQLD/기초 데이터베이스 개념.md
+++ b/_pages/License/SQLD/기초 데이터베이스 개념.md
@@ -10,7 +10,7 @@ thumbnail: ""
 bookmark: true
 ---
 
-# DBMS
+## DBMS
 
 >\> Database Management System
 >\> 정의 : 데이터를 효율적으로 저장하고 관리하기 위해 사용되는 소프트웨어
@@ -18,7 +18,7 @@ bookmark: true
 >\> 예시 : XML 데이터베이스, NoSql 데이터베이스 (MongoDB, Cassandra 등)
 
 
-# RDBMS
+## RDBMS
 
 >\> Relational Database Management System
 >\> 정의 : 관계형 모델을 기반으로 데이터를 관리하는 DBMS
@@ -28,7 +28,7 @@ bookmark: true
 
 
 
-## 논리적·물리적 데이터 구성 요소
+### 논리적·물리적 데이터 구성 요소
 ---
  - 논리적일 때 : 엔터티, 속성, 인스턴스
  - 물리적일 때 : 테이블, 컬럼, 행
