--- a/_pages/License/SQLD/데이터 모델링.md
+++ b/_pages/License/SQLD/데이터 모델링.md
@@ -50,7 +50,7 @@ bookmark: true
 >     - 성능, 저장구조, 보안, 가용성 등을 고려하는 단계
 
 
-#### ERD (Entity Relationship Diagram)
+### ERD (Entity Relationship Diagram)
 \* 엔터티 간의 관계를 시각적으로 표현한 것이며, 1976년 피터첸이 만든 것
 
 >  **6단계**
