Update 에러 코드 정리.md

--- a/_pages/Study/에러 코드 정리.md
+++ b/_pages/Study/에러 코드 정리.md
@@ -11,5 +11,12 @@ bookmark: true
 ## 자주 발생하는 에러 코드 정리
 |코드|내용|
 |---|---|
-|403 - Forbidden|- 접근 권한 부족 <br> - 파일 또는 디렉터리 권한 설정 문제|
+|401 - Unauthorized|- 인증이 필요하나 제공되지 않음 <br> - 잘못된 인증 토큰, 세션 만료|
+|403 - Forbidden|- 클라이언트의 리소스 접근 권한 부족 <br> - 파일 또는 디렉터리 권한 설정 오류, 파일 퍼미션 문제|
 |404 - Not Found|- 요청한 리소스를 서버에서 찾을 수 없음 <br> - URL 오타, 리소스 삭제, 잘못된 링크 접근|
+|500 - Internal Server Error|- 서버 내부에서 처리 불가한 오류 발생 <br> - 코드 오류, 서버 설정 문제, DB 연결 실패|
+|Database Connection Error|- DB 연결 실패 <br> - DB 서버 다운, 인증 정보 오류, 네트워크 문제|
+|Timeout Error|- 요청 응답 대기 시간 초과 <br> - 서버 과부하, 네트워크 지연, 비효율적인 코드|
+|Syntax Error|- 코드 문법 오류로 인한 실행 실패|
+|SSL Crerificate Error|- HTTPS 연결 시 인증서 문제 발생 <br> - 인증서 만료, 신뢰할 수 없는 인증서, 잘못된 인증서 설치|
+|Out of Memory Error|- 메모리 부족, 과도한 메모리 소비, 리소스 부족|
