--- a/_pages/License/SQLD/정규화.md
+++ b/_pages/License/SQLD/정규화.md
@@ -30,4 +30,20 @@ bookmark: true
 >    원자성 : 한 속성이 하나의 값을 갖는 것
 > - 구매 상품 컬럼에 여러 값이 있으므로, 이를 여러 인스턴스로 분해
 
-![image](https://github.com/user-attachments/assets/54831e56-d956-4af5-bd70-df01faa2024e)
+![image](https://github.com/user-attachments/assets/10b13eed-658c-4fdf-a6c6-ab6b1c520377)
+
+
+### 제 2 정규화
+> - **완전 함수 종속**을 만들도록 분리
+>    완전 함수 종속 : 기본키가 해당 컬럼을 완전히 결정할 수 있도록
+> - 강의실의 경우 완전 함수 종속을 위배한 부분 함수 종속 이므로, PK 강의명으로부터 분리
+
+> - ![image](https://github.com/user-attachments/assets/0d84e4ea-38b7-4ad5-9e0b-f2dacfdc1d31)
+
+
+### 제 3 정규화
+> - **이행적 종속**을 없애도록 테이블을 분리
+>     이행적 종속 : A → B, B → c 일 때, A → C 성립
+> - 상품명과 가격은 분리 불가, 고객번호와 가격은 분리 가능
+
+
