--- a/_pages/License/SQLD/관계.md
+++ b/_pages/License/SQLD/관계.md
@@ -15,7 +15,9 @@ bookmark: true
 
 ### 개념
 > - 엔터티와의 연관성
-> - 인스턴스의 논리적인 연관성을 파악
+> - 인스턴스의 논리적인 연관성을 파악 => 페어링
+> - 부모 식별자를 자식에게 상속하고 공통된 식별자를 맵핑(조인)키로 활용
+> - 사원 - 부서 일 경우 부서가 우선이어야 함 (부서 테이블이 부모에 해당)
 
 
 ### 종류
